# dash-boilerplate

./: .editorconfig  .env.dev.example  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  coverage.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  greetings.yml
.logs/: complexity.txt  coverage.txt  dependencies.txt  docstring.txt  maintainability.txt  mypy.txt  pylint-log.txt  safety.txt
.shell/: complexity.sh  cov.sh  docstring.sh  maintainability.sh  mypy.sh  pylint.sh
lib/: app.py
lib/nginx/: Dockerfile  nginx.conf
lib/web/: .coveragerc  .pylintrc  Dockerfile  Dockerfile.prod  coverage.rc  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
lib/web/project/: __init__.py  config.py
lib/web/tests/: test_dash.py  test_total.py
spec/: test_update_output_div.py
